tests/reference/asr-character_parameter_padding_trimming-ea91653.stderr
semantic error: The RHS character len must be known at compile time
 --> tests/character_parameter_padding_trimming.f90:6:5
  |
6 |     character(len=8), parameter :: x_pad = "apple" !> char length on right is 5
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
